--- a/ArpSpoofing/ArpSpoofing.csproj
+++ b/ArpSpoofing/ArpSpoofing.csproj
@@ -48,6 +48,9 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Util\" />
+  </ItemGroup>
 
   <!-- 
     Defining the "HasPackageAndPublishMenuAddedByProject" property here allows the Solution 
