--- a/ArpSpoofing/ArpSpoofing.csproj
+++ b/ArpSpoofing/ArpSpoofing.csproj
@@ -10,8 +10,10 @@
     <PublishProfile>win10-$(Platform).pubxml</PublishProfile>
     <UseWinUI>true</UseWinUI>
     <EnableMsixTooling>true</EnableMsixTooling>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="View\ArpPage.xaml" />
     <None Remove="View\SettingPage.xaml" />
   </ItemGroup>
 
@@ -30,6 +32,7 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230502000" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="2.0.9" />
     <PackageReference Include="PacketDotNet" Version="1.4.7" />
     <PackageReference Include="SharpPcap" Version="6.2.5" />
     <Manifest Include="$(ApplicationManifest)" />
@@ -49,7 +52,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Util\" />
+    <Page Update="View\ArpPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 
   <!-- 
